# makoto

./: .gitignore  README.md  RESEARCH.md
.github/workflows/: ci.yml  deploy-redirect.yml
docs/: index.html
docs/attestations/: transform-example.json
docs/comparison/: decision-guide.html  index.html  open-lineage.html  w3c-prov.html
docs/examples/: index.html
docs/expanso/: index.html
docs/levels/: index.html
docs/privacy/: index.html
docs/spec/: index.html  l1-requirements.html  l2-requirements.html  l3-requirements.html  signature-guide.html
docs/threats/: index.html
openspec/: project.md
openspec/changes/add-makoto-roadmap/: proposal.md  tasks.md
openspec/changes/add-makoto-roadmap/specs/makoto-framework/: spec.md
redirect/: index.js  wrangler.toml
schemas/: README.md  dbom-v1.json  origin-v1.json  stream-window-v1.json  transform-v1.json
schemas/in-toto/: statement-v1.json
schemas/makoto.dev/common/: definitions.json
schemas/makoto.dev/dbom/: v1.json
schemas/makoto.dev/origin/: v1.json
schemas/makoto.dev/stream-window/: v1.json
schemas/makoto.dev/transform/: v1.json
sdks/: README.md
sdks/codegen/: Makefile  README.md  generate.py
sdks/python/: README.md  pyproject.toml
sdks/python/src/makoto/: __init__.py
sdks/python/src/makoto/attestation/: __init__.py  builder.py  statement.py  verifier.py
sdks/python/src/makoto/models/: __init__.py  common.py  dbom.py  origin.py  stream_window.py  transform.py
sdks/python/src/makoto/signing/: __init__.py  bundle.py  signer.py
sdks/python/tests/: __init__.py  test_attestation.py  test_models.py  test_signing.py
sdks/rust/: Cargo.toml
sdks/rust/src/: error.rs  hash.rs  lib.rs  signing.rs  verification.rs
sdks/rust/src/types/: common.rs  dbom.rs  mod.rs  origin.rs  stream_window.rs  transform.rs
sdks/rust/tests/: integration.rs
